# android-onnx-showcase

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/gos/denver/onnxshowcase/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dtln1.ort  dtln2.ort
app/src/main/java/gos/denver/onnxshowcase/: MainActivity.kt
app/src/main/java/gos/denver/onnxshowcase/audio/: AudioConstants.kt  AudioConversionUtils.kt  AudioFileWriter.kt  AudioPermissionHandler.kt  AudioPlayer.kt  AudioRecorder.kt  ConcurrentAudioProcessing.kt  ConcurrentAudioProcessor.kt  NoiseSuppressor.kt
app/src/main/java/gos/denver/onnxshowcase/audio/impl/: AudioPlayerImpl.kt  AudioRecorderImpl.kt  ConcurrentAudioProcessorImpl.kt  MockAudioPlayer.kt  MockAudioRecorder.kt  MockNoiceSuppressor.kt  NoiseSuppressorImpl.kt  RawAudioRecorderImpl.kt  SimplAudioFileWriterImpl.kt
app/src/main/java/gos/denver/onnxshowcase/ui/: MainViewModel.kt  MainViewModelFactory.kt  UiState.kt
app/src/main/java/gos/denver/onnxshowcase/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: stop.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/gos/denver/onnxshowcase/: ExampleUnitTest.kt
core-fft/: build.gradle.kts
core-fft/src/main/cpp/: CMakeLists.txt  FFTNative.cpp
core-fft/src/main/java/gos/denver/fft/: FFTNative.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
